# printer-anomaly-detection

./: .autoenv.zsh  .gitignore  pyproject.toml
datasets/: INFO.md  offsets.csv
src/notebooks/: data_loading.ipynb  playground.ipynb  preprocessing.ipynb  sensor_data_exploration.ipynb
src/notebooks/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb  data_loading-checkpoint.ipynb  preprocessing-checkpoint.ipynb  sensor_data_exploration-checkpoint.ipynb
src/notebooks/exploration/audio/: data_length.ipynb  model.ipynb  model_test.ipynb  normalization.ipynb  scaling.ipynb  train_test_val.ipynb
src/notebooks/exploration/merged/: exploration.ipynb
src/notebooks/preprocessing/: data_merging.ipynb  preprocessing.ipynb  sensor_data_exploration.ipynb
src/notebooks/printer_data/: data_exploration.ipynb
src/printer_anomaly_detection/dataset/: __init__.py  audio.py  video.py
src/printer_anomaly_detection/model/: cae.py
src/printer_anomaly_detection/preprocessing/: prepare_dataset.py
src/printer_anomaly_detection/training/: audio.py
src/printer_anomaly_detection/util/: __init__.py
trainings/: 2023-06-21T19:23:42-normalized_latent_256-config.yaml  2023-06-21T19:26:29-normalized_latent_256-config.yaml  2023-06-21T19:28:21-normalized_latent_256-config.yaml  2023-06-21T19:36:18-normalized_latent_256-config.yaml  2023-06-21T19:42:51-normalized_latent_256-config.yaml  2023-06-21T20:40:04-normalized_latent_256-config.yaml  2023-06-21T20:40:58-normalized_latent_256-config.yaml  2023-06-21T20:48:50-normalized_latent_256-config.yaml  2023-06-21T20:49:18-normalized_latent_256-config.yaml  2023-06-21T20:59:29-test-config.yaml  2023-06-21T21:06:53-test-config.yaml  2023-06-21T21:09:20-test-config.yaml  2023-06-21T21:15:03-test-config.yaml  2023-06-21T21:18:05-test-config.yaml  2023-06-21T21:32:32-test-config.yaml  2023-06-21T21:34:51-test-config.yaml  2023-06-21T21:39:04-test-config.yaml  2023-06-21T21:43:50-test-config.yaml  2023-06-21T21:51:09-test-config.yaml  2023-06-21T22:06:18-test-config.yaml  2023-06-21T22:17:46-test-config.yaml  2023-06-21T22:21:43-test-config.yaml  2023-06-22T13:27:09-test-config.yaml  2023-06-22T13:27:32-test-config.yaml  2023-06-22T13:58:25-test-config.yaml  2023-06-22T14:23:39-test-config.yaml  2023-06-22T14:46:22-test-d4868c3-config.yaml  2023-06-22T14:57:21-test-d4868c3-config.yaml  2023-06-22T14:59:35-test-d4868c3-config.yaml  2023-06-22T17:37:16-test-8447b88-config.yaml  2023-06-22T17:37:47-test-8447b88-config.yaml  2023-06-22T17:53:24-test-8447b88-config.yaml  2023-06-22T18:02:10-test-8447b88-config.yaml  2023-06-22T18:05:29-test-8447b88-config.yaml  2023-06-22T18:16:05-test-8447b88-config.yaml  2023-06-22T18:22:25-test-8447b88-config.yaml  2023-06-22T18:23:53-test-8447b88-config.yaml  2023-06-22T18:30:06-test-8447b88-config.yaml  2023-06-22T20:47:38-test-58fe5f6-config.yaml  2023-06-22T20:51:00-test-4a001a3-config.yaml  (+16 more)
(+13 files in other folders)
